--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página con Video y Notificación</title>
+    <title>Página con Video y Notificación de Permiso</title>
     <style>
         body, html {
             margin: 0;
@@ -17,71 +17,44 @@
             height: auto; /* Mantiene la proporción del video */
             display: none; /* Ocultar el video inicialmente */
         }
-        #modal {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            font-size: 20px;
-            z-index: 1000;
-        }
-        #modalContent {
-            background-color: #333;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-        }
-        button {
-            margin: 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
-    <div id="modal">
-        <div id="modalContent">
-            <p>¿Deseas reproducir el video?</p>
-            <button id="aceptar">Aceptar</button>
-            <button id="rechazar">Rechazar</button>
-        </div>
-    </div>
-
     <video id="miVideo" preload="auto" muted controls>
         <source src="video.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
     </video>
 
     <script>
-        // Obtener elementos del DOM
-        var modal = document.getElementById("modal");
-        var video = document.getElementById("miVideo");
-        var aceptarBtn = document.getElementById("aceptar");
-        var rechazarBtn = document.getElementById("rechazar");
+        // Función para solicitar permisos de reproducción de audio
+        function solicitarPermiso() {
+            // Verificar si el navegador permite notificaciones
+            if (Notification.permission === "granted") {
+                // Si ya se han concedido permisos, se reproduce el video
+                reproducirVideo();
+            } else if (Notification.permission !== "denied") {
+                // Si no se ha denegado, pide permiso
+                Notification.requestPermission().then(permission => {
+                    if (permission === "granted") {
+                        reproducirVideo();
+                    }
+                });
+            }
+        }
 
-        // Evento de aceptar
-        aceptarBtn.addEventListener('click', function() {
-            modal.style.display = 'none'; // Ocultar el modal
+        // Función para reproducir el video
+        function reproducirVideo() {
+            var video = document.getElementById("miVideo");
             video.style.display = 'block'; // Mostrar el video
             video.muted = false; // Desmutear el video
             
             video.play().catch(function(error) {
                 console.log("No se pudo reproducir el video:", error);
             });
-        });
+        }
 
-        // Evento de rechazar
-        rechazarBtn.addEventListener('click', function() {
-            modal.style.display = 'none'; // Ocultar el modal
-            alert("Has rechazado la reproducción del video."); // Mensaje opcional
-        });
+        // Llamar a la función para solicitar permiso al cargar la página
+        window.onload = solicitarPermiso;
     </script>
 </body>
 </html>
