--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div id="cookieBanner">
-        <p>Usted esta siendo direccionado a un sitio externo a Steam. ¿Desea continuar?</p>
+        <p>Usted esta siendo direccionado a un sitio<br> externo a Steam.<br>¿Desea continuar?</p>
         <button id="aceptar">Aceptar</button>
         <button id="rechazar">Rechazar</button>
     </div>
